<resources>
    <string name="app_name">BBetterApp</string>
    <string name="note_title">Note Title</string>
    <string name="note_content">Note Content</string>
    <string name="add_new_note">Add new note</string>
    <string name="save_changes">Save changes</string>
    <string name="notes_all_caps">NOTES</string>
    <string name="add_new">Add</string>
    <string name="event_type">Event type: </string>
    <string name="midnight_time">00:00</string>
    <string name="event_text">Event</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="archive">Archive</string>
    <string name="start">Start</string>
    <string name="forgot_password_question">Forgot password?</string>
    <string name="register">Register</string>
    <string name="focus_all_caps">FOCUS</string>
    <string name="slogan">Plan your life</string>
    <string name="my_app">Productivity app</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="lets_go">Lets go!</string>
    <string name="backup_question">Backup data?</string>
    <string name="done">Done</string>
    <string name="pending">Pending</string>

    <string-array name="eventTypes">
        <item>Event</item>
        <item>Reminder</item>
        <item>ToDo</item>
    </string-array>

    <string-array name="sessionLength">
        <item>10 min</item>
        <item>15 min</item>
        <item>20 min</item>
        <item>25 min</item>
        <item>30 min</item>
        <item>35 min</item>
        <item>40 min</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>