<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#211D44">

    <ImageView
        android:id="@+id/splashScreenImage"
        android:layout_width="380dp"
        android:layout_height="390dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/icget"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/twSplashBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/focus_all_caps"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:fontFamily="sans-serif-black"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintTop_toBottomOf="@id/splashScreenImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/twSubBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/twSplashBanner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textColor="#A3A2AD"
        android:textSize="20sp"
        android:lineSpacingExtra="8dp"/>
    <Button
        android:id="@+id/startButton"
        android:layout_width="280dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toTopOf="@id/backupDataButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/lets_go"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:background="@drawable/button_green_bg"/>

    <Button
        android:id="@+id/backupDataButton"
        android:layout_width="280dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/backup_question"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:background="@drawable/button_green_bg"
        android:visibility="invisible"/>
    <ProgressBar
        android:id="@+id/progressBarBackup"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/startButton"
        app:layout_constraintTop_toBottomOf="@id/twSubBanner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        tools:ignore="MissingConstraints"/>


</androidx.constraintlayout.widget.ConstraintLayout>